# CLIF_transplant

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup_env.sh
code/: 01_cohort_identification.py  01_cohort_identification_UCMC.py  01_hr_transplant_recipients.py  01_hr_transplant_reicpients.py  02_table_one.py  NOT_REQUIRED_valeos_inpatient_dashboard.py  README.md  clif_to_valeos.py  heart_transplant_report.py  valeos_inpatient_dashboard.py
config/: config_template.json
public/data/: clif_hr_tx_counts.csv
references/: clif_2.1.0.txt
references/mCIDE/: Admission_diagnosisModel.json  CRRT_therapyModel.json  Code_statusModel.json  ECMO_MCSModel.json  Hospital_diagnosisModel.json  Medication_admin_intermittentModel.json  Microbiology_cultureModel.json  Microbiology_non_cultureModel.json  Microbiology_susceptibilityModel.json  Patient_proceduresModel.json
utils/: load_config.py
